# termout

./: .gitignore  pyproject.toml  termout.py
termout/: app.py  components.py  screen.py  storage.py  termout.tcss  timer_widget.py  utils.py
